--- a/latex/main.tex
+++ b/latex/main.tex
@@ -97,19 +97,18 @@
 \subsection{Phase 2 : Lecture du code barre}
 
 La phase précédente a permis de récupérer un ensemble de couple de points représentant des rayons. 
-Pour chaque couple de points, nous déterminons d'une part les 13 valeurs du code barre, et d'autre part, s'il est valide ou non.
+Pour chaque couple de points, nous déterminons d'une part les 13 valeurs du code barre, et d'autre part, nous vérifions s'il est valide ou non.
 
 \subsubsection*{Seuillage à l'aide d'Otsu}
 La méthode d'Otsu est une technique de seuillage de Nobuyuki Otsu utilisée en traitement d'images pour la segmentation binaire. 
 Elle vise à séparer les pixels d'une image en deux classes distinctes : l'avant-plan et l'arrière-plan. 
-L'algorithme d'Otsu consiste à chercher le seuil de gris qui minimise la variance intra-classe, c'est-à-dire la somme des variances des deux classes. 
-Pour ce faire, il calcule l'histogramme des niveaux de gris de l'image et évalue la dispersion des pixels pour chaque seuil possible. 
+Pour ce faire, on construit l'histogramme des niveaux de gris de l'image et évalue la dispersion des pixels pour chaque seuil possible. 
 Le seuil optimal est celui qui maximise la variance inter-classe, assurant ainsi une séparation claire entre les deux classes. 
 En pratique, le seuil calculé se situe entre les deux pics de l'histogramme.
 
 \subsubsection*{Détermination des limites du code-barres}
 La première étape de cette phase est de réduire ce rayon, de sorte que les deux nouveaux points correspondent à la première barre noire du code barre.
-Pour cela, nous devons tout d'abord opérer un seuillage de l'image grâce au seuil donné par l'algorithme d'otsu.
+Pour cela, nous devons tout d'abord opérer un seuillage de l'image grâce au seuil donné par l'algorithme d'Otsu.
 
 Cet ensemble de points va alors être binarisé grâce au seuil. C'est à dire que les points de valeurs inférieures au seuil vont valoir 1 et les autres vont valoir 0
 
@@ -120,7 +119,7 @@ Finalement un dernier échantillonnage suivi d'une binarisation sur le même seu
 C'est à dire que les points de valeurs inférieures au seuil vont valoir 0 tandis que les autres vont valoir 0.
 Le nombre de point échantillonnés est calculé en prenant $N=u*95$ avec u le plus petit multiple de 95 tel que u*95>L la longueur du segment du code barre
 
-\subsubsection{Analyse du code barre binaire}
+\subsubsection*{Analyse du code barre binaire}
 La prochaine étape consiste à séparer les différents blocs contenu dans la liste binaire obtenu précédemment en ne gardant que ceux représentant des nombres
 Pour décoder chaque blocs, ils font être comparé avec des données de décodage en adaptant celle-ci à la taille du bloc 
 Le choix se fera en prenant la plus petit norme de la différence entre le bloc et les données comparés.
@@ -166,30 +165,34 @@ Il suffit ainsi de lire le tableau de correspondance suivant :
         AABBBA & 3 & ABABBA & 8 \\ \hline
         ABAABB & 4 & ABBABA & 9 \\ \hline
     \end{tabular}
-    \caption{Tableau des familles d’appartenance de la première séquence}
+    \caption{Tableau des familles d’appartenance de la séquence}
     \label{tab:sequence}
 \end{table}
 
 \subsubsection*{Vérification de la clef de contrôle}
-Pour déterminer la clé de contrôle, il faut additionner les chiffres en positions paire à trois fois les
-les chiffres en positions impaires jusqu'au $12^{eme}$ chiffre. La clé est alors valable si son chiffre des
-unités est égal au complément à 10 du $13^{eme}$ chiffre du code.
- 
+Pour déterminer la clé de contrôle, il faut additionner les chiffres en positions paires à trois fois la somme des
+chiffres en positions impaires jusqu'au $12^{eme}$ chiffre. 
+La clé est alors valable si le chiffre des unités est égal au complément à 10 du $13^{eme}$ chiffre du code.
+
 \section{Implémentation}
 
 \subsection{Phase 1 : Détection du code barre}
 
 \subsection{Phase 2 : Lecture du code barre}
 
-Contrairement à la phase précédente, nous avons implémenté la phase 2 entièrement en programmation imprérative.
+Contrairement à la phase précédente, nous avons implémenté la phase 2 entièrement en programmation impérative.
 Chaque étape clé de l'algorithme est implémentée par une fonction spécifique, tout en respectant les principes de modularité et de réutilisabilité du code.
+
+\vspace{0.5cm}
 
 Les fonctions réutilisées sont : 
 \begin{itemize}
 	\item \texttt{distance} : Calcule la distance entre deux points.
 	\item \texttt{echantillonnage} : Échantillonne un segment pour un nombre de points donné en choisissant le plus proche voisins avec np.around.
-	\item \texttt{norme\_binaire} : Calcul la norme binaire entre les blocs binaires du code-barres et les séquences à comparer. Cette norme se traduit dans l'implémentation par une comparaison bit à bit.
+	\item \texttt{norme\_binaire} : Calcule la norme binaire entre les blocs binaires du code-barres et les séquences à comparer. Cette norme se traduit dans l'implémentation par une comparaison bit à bit.
 \end{itemize}
+
+\vspace{0.5cm}
 
 Les fonctions implémentées sont :
 \begin{itemize}
@@ -197,10 +200,10 @@ Les fonctions implémentées sont :
 	\item \textbf{Détermination des limites du code-barres} : La fonction \texttt{find\_lim} permet de déterminer les limites du code barre à partir d'un segment donné. 
 	La fonction \texttt{find\_u} permet de déterminer le facteur u pour échantillonner le second segment de code barre.
 	\item \textbf{Analyse du code barre binaire} : La fonction \texttt{separate} détermine les douze blocs de données (ignorant les gardes) à partir du segment seuillé et les placent dans un tableau, facilitant alors le déchiffrement. 
-	La fonction \texttt{compare} va alors utiliser la fonction \texttt{norme\_binaire} pour comparer chaque bloc binaire du tableau sortant de \texttt{separate} et permttre de récupérere les 12 chiffres décodés et une liste contenant la séquence AB.
+	La fonction \texttt{compare} va alors utiliser la fonction \texttt{norme\_binaire} pour comparer chaque bloc binaire du tableau sortant de \texttt{separate} et permettre de récupérer les 12 chiffres décodés et une liste contenant la séquence AB.
 	\item \textbf{Détermination du premier chiffre du code barre} : La fonction \texttt{first\_one} permet de déterminer le premier chiffre du code barre à partir de la séquence AB.
 	\item \textbf{Vérification de la clef de contrôle} : La fonction \texttt{clef\_controle} permet de vérifier la validité du code barre en calculant la clé de contrôle.
-	Elle est calculé par le produit scalaire avec le vecteur [1, 3, 1, 3, 1, 3, 1, 3, 1, 3, 1, 3]. De plus, nous avons utilisé un modulo 10 sur le complément à 10 pour prendre en compte que le complement à 10 de 0 est 0.
+	Elle est calculée par le produit scalaire avec le vecteur [1, 3, 1, 3, 1, 3, 1, 3, 1, 3, 1, 3]. De plus, nous avons utilisé un modulo 10 sur le complément à 10 pour prendre en compte que le complément à 10 de 0 est 0.
 \end{itemize}
 
 \section{Résultats}
