Corrections des tableaux dans le rapport

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -321,8 +321,10 @@ Le code barre est donc valide.
 	\centering 
 	\begin{tabular}{c|c|c}
 		& Tâches entreprises& Temps passé\\ \hline
-		Elisa& Prise de connaissance du sujet et commencement de la méthode d'Otsu& 2h\\ \hline
-		Alban& Lecture et analyse du sujet et début de l'implémentation d'algorithme d'échantillonnage et de binarisation& 2h\\ \hline
+		Elisa& Prise de connaissance du sujet & 2h\\
+        & + début d'implémentation de la méthode d'Otsu & \\ \hline
+		Alban& Prise de connaissance du sujet & 2h\\
+        & + début implémentation de l'échantillonnage et de la binarisation & \\ \hline
 		Tierno& & \\ \hline
 		David& & 
 	\end{tabular}
@@ -336,7 +338,8 @@ Le code barre est donc valide.
 	\begin{tabular}{c|c|c}
 		& Tâches entreprises& Temps passé\\ \hline
 		Elisa& Finition de la méthode d'Otsu & 2h\\ \hline
-		Alban& Complétion de l'échantillonnage et de la binarisation, début du calcul des limites du code-barres et de la recherche de u& 2h\\ \hline
+		Alban& Complétion de l'échantillonnage et de la binarisation& 2h\\
+        &  début du calcul des limites du code-barres et de la recherche de u & \\ \hline
 		Tierno& & \\ \hline
 		David& & 
 	\end{tabular}
@@ -350,7 +353,7 @@ Le code barre est donc valide.
 	\begin{tabular}{c|c|c}
 		& Tâches entreprises& Temps passé\\ \hline
 		Elisa& Débuggage et mise en commun de toutes les fonctions de la phase 1 & 3h\\ \hline
-		Alban& Débuggage des fonctions de décodage des blocs fait chez soi et mise en commun du travail phase1& 3h\\ \hline
+		Alban& Débuggage et mise en commun de toutes les fonctions de la phase 1& 3h\\ \hline
 		Tierno& & \\ \hline
 		David& & 
 	\end{tabular}
@@ -377,8 +380,8 @@ Le code barre est donc valide.
 	\centering 
 	\begin{tabular}{c|c|c}
 		& Tâches entreprises& Temps passé\\ \hline
-		Elisa& Rédaction du rapport & \\ \hline
-		Alban& Rédaction du rapport & \\ \hline
+		Elisa& Rédaction du rapport & 3h\\ \hline
+		Alban& Rédaction du rapport & 3h\\ \hline
 		Tierno& & \\ \hline
 		David& & 
 	\end{tabular}
